--- a/src/index.css
+++ b/src/index.css
@@ -35,6 +35,8 @@ body {
     justify-content: center;
     place-items: center;
     min-width: 320px;
+    width: 100%;
+    height: 100vh;
     min-height: 100vh;
 }
 
