--- a/src/components/metronome/metronome.module.css
+++ b/src/components/metronome/metronome.module.css
@@ -3,9 +3,9 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: white;
-    gap: .5rem;
-    color: black;
+    background-color: #242424;
+    gap: 0.5rem;
+    color: white;
     padding: 2rem;
     border-radius: 1rem;
     width: 100%;
@@ -13,9 +13,11 @@
     max-width: 600px;
 }
 
-.beat {
-    font-size: 2rem;
-    font-weight: 700;
+.beats {
+    display: flex;
+    gap: 0.5rem;
+    width: 100%;
+    justify-content: center;
 }
 
 .bpm {
@@ -23,19 +25,12 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: .5rem;
+    gap: 0.5rem;
     width: 100%;
 }
 
 .bpmValue {
     text-align: center;
-}
-
-.bpmControls {
-    display: flex;
-    justify-content: center;
-    gap: 0.5rem;
-    width: 100%;
 }
 
 .button {
@@ -47,19 +42,16 @@
     cursor: pointer;
 }
 
-.primaryButton {
-    background-color: #007bff;
-    color: white;
-}
-
 .startButton {
     background-color: #36f994;
-    color: black;
+    color: white;
+    font-size: 1.3rem;
 }
 
 .stopButton {
     background-color: #ff3b3b;
     color: white;
+    font-size: 1.3rem;
 }
 
 .signatures {
